--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,17 @@ tr {
   height: 45%;
 }
 
+.rest-tittle {
+  text-align: center;
+}
+
+.food-list {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 .active-row {
   background: aquamarine;
 }
